test-app/templates/deployment.newtestapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-testapp-frontend
  namespace: default
  labels:
    app.kubernetes.io/name: new-testapp-frontend
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: new-testapp-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: new-testapp-frontend
    spec:
      containers:
        - name: new-testapp-frontend
          image: nginx:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 15m
              memory: 128Mi
