test-app/templates/service.newtestapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-testapp-frontend
spec:
  selector:
    app.kubernetes.io/name: new-testapp-frontend
  type: ClusterIP
  ports:
    - port: 8085
      targetPort: 80
