test-app/templates/service.testapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp-frontend
spec:
  selector:
    app.kubernetes.io/name: testapp-frontend
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
