test-app/templates/ingress.newtestapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-testapp-frontend
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: new-testapp-frontend
                port:
                  number: 8085
